# YTubic

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  release.yml
docs/: code-review-2026-07.md  release-plan.md
src/: index.css
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/examples/: lastfm_probe.rs
src-tauri/src/: appid.rs  discord.rs  lastfm.rs  lib.rs  media.rs
src/components/layout/: about-dialog.tsx  app-shell.tsx  app-sidebar.tsx  channel-picker-dialog.tsx  entity-page-header.tsx  floating-player-app.tsx  floating-player-sync.tsx  player-bar-bottom.tsx  player-bar.tsx  premium-gate-dialog.tsx  whats-new-dialog.tsx
src/components/settings/: account-tab.tsx  general-tab.tsx  integrations-tab.tsx  primitives.tsx  settings-dialog.tsx  storage-tab.tsx
src/components/shared/: entity-header.tsx  expandable-text.tsx  like-buttons.tsx  shelf-card.tsx  shelf-carousel.tsx  track-context-menu.tsx  track-list.tsx
src/components/ui/: sidebar.tsx
src/lib/: audio-engine.ts  lastfm-scrobbler.ts  lastfm.ts  platform.ts  query-client.ts  stream.ts  whats-new.ts
src/lib/innertube/: artist.ts  browse.ts  channels.ts  library.ts  playlist.test.ts  playlist.ts  radio.ts  shared.test.ts  shared.ts  types.ts
src/lib/lyrics/: match.test.ts  match.ts  parse-lrc.test.ts
src/lib/store/: accounts.ts  entity-header.ts  playback.test.ts  playback.ts  premium.ts  settings-dialog.ts  settings.ts
src/routes/: artist.$id.tsx  browse.$id.tsx  index.tsx  playlist.$id.tsx
